feat: funcion generar tabla

--- a/public/usuarios.html
+++ b/public/usuarios.html
@@ -11,16 +11,40 @@
         fetch("/users")
         .then (data => data.json())
         .then(usuarios => {
-        const nombreUsuario = usuarios.nombreUsuario
-        const ul = document.createElement("ul")
-        for (let i = 0; i < usuarios.length; i++){ 
-            const li = document.createElement("li")
-            li.innerText = usuarios[i].nombreUsuario
-            ul.appendChild(li)
-        }
-        document.body.appendChild(ul)
-        console.log(usuarios)
+            generarTabla(usuarios)
         })
+        function generarTabla(array){
+            const table = document.createElement("table")
+            const thead = document.createElement("thead")
+            table.appendChild(thead)
+            const tr = document.createElement("tr")
+            thead.appendChild(tr)
+
+            const claves = Object.keys(array[0])
+
+            for(let i=0; i < claves.length; i++){
+            console.log(claves[i])
+            const td = document.createElement("td")
+            td.innerText = claves[i]
+            tr.appendChild(td)
+            }
+
+            const tbody = document.createElement("tbody")
+            table.appendChild(tbody)
+
+            for(let i=0; i < array.length; i++){
+            console.log(array[i])
+            const tr = document.createElement("tr")
+            for(let j=0; j < claves.length; j++){
+                const td = document.createElement("td")
+                const clave = claves[j]
+                td.innerText = array[i][clave]
+                tr.appendChild(td)
+            }
+            tbody.appendChild(tr)
+            }
+            document.body.appendChild(table)
+        }
     </script>
 </body>
 </html>
